# note-trainer

./: .python-version  README.rst  pyproject.toml
notetrainer/: app.py  theory.py
