[tool.poetry]
name = "note-trainer"
version = "0.1.0"
description = "App for learning to move between notes of chords in keys."
authors = ["Blaine Rogers <blaine.w.rogers@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "note_trainer"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
